stock-module/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-stock-service
  namespace: be-namespace
spec:
  selector:
    app: be-stock
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
