stock-module/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: be-stock-gateway
  namespace: be-namespace
spec:
  selector:
    istio: ingressgateway  # Istio 기본 Ingress Gateway 사용
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "inst00k.shop"  # 외부에서 접근할 도메인
